part-1/string-generator/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: string-generator-svc
spec:
  type: ClusterIP
  selector:
    app: string-generator
  ports:
    - port: 2345
      protocol: TCP
      targetPort: 3000
